2018-05-19  Daniel Hawkins
    * server/player.c: Load background music when moving through tiled maps.

2018-02-12  Daniel Hawkins
    * server/monster.c: Refactor to reduce calls to ob_blocked by remembering prior blocked tiles from the same run.
      This causes a small but noticable (~5%) reduction in overall pathing cost.
      Do a quick check in monster_compute_path to ensure there are multiple ways the monster can move around
      before attempting to go through the whole pathing algorithm. This yields significant performance improvements.

2018-02-11  Daniel Hawkins
    * common/map.c: Refactor get_map_from_coord() to be iterative instead of recursive.

2018-02-03  Daniel Hawkins
    * server/time.c: Improve change_object to handle multi-tile monster changes.
    * test/unit/server/check_monster_change.c: Add unit test for changing monsters.
    * test/unit/server/Makefile.am: Add new unit test to the build instructions.

2018-01-24  Daniel Hawkins
    * server/login.c: Prevent memory leak of party_name on attempted login of a player with negative hp.

2018-01-23  Daniel Hawkins
    * common/anim.c: Reduce calls to realloc on animation load. Handle failed realloc gracefully.

2018-01-22  Daniel Hawkins
    * server/plugins.c: Fix redundant call to va_end in cfapi_object_move.

2018-01-21  Daniel Hawkins
    * common/init.c: Use strspn for finding the first non-whitespace character in attackmess,
      and allow for tabs to be used as whitespace.
    * socket/request.c: Reorder conditions to prevent segfault if pl is null in esrv_remove_spell.

2018-01-18  Daniel Hawkins
    * lib/artifacts: Fix boots/gauntlets that should posess a damage value that don't. Fixes bug #832.

2018-01-14  Daniel Hawkins
    * server/skills.c: Fix segfault from check for transport when monster uses
      jumping skill.

2018-01-13  Daniel Hawkins
    * lib/artifacts: Make goblin leaders generate facing forward and animate the